[package]
name = "rs-shell"
version = "0.0.0"
edition = "2021"
description = "[PLACEHOLDER] a basic shell writen in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rsh"

[dependencies]
regex = "1.5.6"
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "3.1.6" }
